read pdf/pic/jupyter

--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@ tool result offload to file / deleted
 /slash command
 /dump_conv & /load_conv
 github release
+✅read tool for pdf/word/ppt/pic/video
